--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,12 @@ MONGODB_URI=mongodb+srv://praneeththota6124:<kanni%401234>@praneeth.dw1b1.mongod
 
 
 CORS_ORIGIN=*
+
+ACCESS_TOKEN_SECRET=praneeth6124
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=praneeth1234
+REFRESH_TOKEN_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
